MicroScript's source code: Update and Fix "var" variable with type annotations