@@ -1,3 +1,9 @@
+/**
+ * MicroScript — The programming language
+ * Copyright (c) 2024-2025 Cyril John Magayaga
+ * 
+ * It was originally written in Java programming language.
+ */
 package com.magayaga.microscript;
 
 import java.util.List;
@@ -65,13 +71,9 @@ public class Executor {
                             }
                             break;
                         case "Int32":
-                            if (!(value instanceof Integer)) {
-                                throw new RuntimeException("Type error: " + valueExpression + " is not an Int32.");
-                            }
-                            break;
                         case "Int64":
-                            if (!(value instanceof Long)) {
-                                throw new RuntimeException("Type error: " + valueExpression + " is not an Int64.");
+                            if (!(value instanceof Integer)) {
+                                throw new RuntimeException("Type error: " + valueExpression + " is not an Integer.");
                             }
                             break;
                         case "Float32":
@@ -153,7 +155,8 @@ public class Executor {
     }
 
     private void executeSystemCommand(String command) throws Exception {
-        Process process = Runtime.getRuntime().exec(command);
+        String[] cmdArray = command.split(" ");
+        Process process = new ProcessBuilder(cmdArray).start();
         BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
         String line;
         while ((line = reader.readLine()) != null) {
